# smt-dialect

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-and-test.yml
include/: CMakeLists.txt
include/SMT/: CMakeLists.txt  SMTDialect.h  SMTDialect.td  SMTInterfaces.h  SMTInterfaces.td  SMTOps.h  SMTOps.td  SMTSerializers.h
lib/: CMakeLists.txt
lib/SMT/: CMakeLists.txt  SMTDialect.cpp  SMTInterfaces.cpp  SMTOps.cpp  SMTSerializers.cpp
playground/: requirements.txt  smto.ipynb  smto.py
playground/xdsl-smt/: arith_dialect.py  arith_to_smt.py  bitvector_dialect.py  commute.py  dialect.py  requirements.txt  smt_conversion.py  utils_dialect.py  xdsl-smt.py
playground/xdsl-smt/tests/filecheck/: lit.cfg  parsing-core.xdsl
playground/xdsl-smt/tests/filecheck/arith-to-smt/: add.xdsl  commute_tv.xdsl  constant.xdsl  empty_func.xdsl
playground/xdsl-smt/tests/filecheck/bitvector-theory/: bvadd.xdsl  constant.xdsl
playground/xdsl-smt/tests/filecheck/core-dialect/: and.xdsl  eq.xdsl  implies.xdsl  ite.xdsl  xor.xdsl
playground/xdsl-smt/tests/filecheck/core-theory/: and.xdsl  call.xdsl  constant-bool.xdsl  distinct.xdsl  eq.xdsl  exists.xdsl  forall.xdsl  implies.xdsl  ite.xdsl  not.xdsl  xor.xdsl
playground/xdsl-smt/tests/filecheck/script/: assert.xdsl  check-sat.xdsl  declare-const.xdsl  define-fun.xdsl
playground/xdsl-smt/tests/filecheck/utils-theory/: first.xdsl  pair.xdsl  pair_type.xdsl  second.xdsl
smt-opt/: CMakeLists.txt  smt-opt.cpp
smt-translate/: CMakeLists.txt  smt-translate.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/MLIRToSMT/: basic.mlir  forall.mlir  func-equiv.mlir
test/SMT/: dummy.mlir  rewrite.mlir  simple.mlir  simple.smt2  symbolic.mlir
tests/SMT/: rewrite.mlir  symbolic.mlir
utils/: build.sh
